# gaggumV2

./: .gitignore  README.md
back/: .gitignore  app.js  build.gradle  dockerfile  helper.js  package-lock.json  package.json
back/aws/: s3.js
back/eureka/: build.gradle
back/eureka/src/main/java/com/gaggum/eureka/: EurekaApplication.java
back/eureka/src/test/java/com/gaggum/eureka/: EurekaApplicationTests.java
back/plantservice/: build.gradle  settings.gradle
back/robotservice/: settings.gradle
back/routes/: diary.js  plant.js  turtle.js  user.js
back/servies/: db.js  diary.js  plant.js  turtle.js  user.js
back/socket/: socket.js
back/src/main/java/com/gaggum/back/: BackApplication.java
back/src/main/java/com/gaggum/back/config/: AmazonS3Config.java  (+3 more)
back/src/test/java/com/gaggum/back/: BackApplicationTests.java
back/userservice/: .gitignore
dev_ws/src/install/: local_setup.bat  local_setup.ps1  setup.bat  setup.ps1
dev_ws/src/install/pubsub_cpp/share/pubsub_cpp/: local_setup.bat  local_setup.dsv  package.bat  package.dsv  package.ps1
dev_ws/src/install/pubsub_cpp/share/pubsub_cpp/cmake/: pubsub_cppConfig.cmake
dev_ws/src/install/sioclient/lib/cmake/sioclient/: sioclientTargets-release.cmake
dev_ws/src/install/sioclient/share/sioclient/: package.bat  package.dsv  package.ps1
dev_ws/src/install/tutorial_interfaces/include/tutorial_interfaces/msg/: num.h  num.hpp  num__rosidl_typesupport_fastrtps_cpp.hpp  num__struct.h  num__traits.hpp  rosidl_typesupport_opensplice_c__visibility_control.h  rosidl_typesupport_opensplice_cpp__visibility_control.h
dev_ws/src/install/tutorial_interfaces/lib/: tutorial_interfaces__rosidl_generator_c.lib  tutorial_interfaces__rosidl_typesupport_fastrtps_cpp.lib  tutorial_interfaces__rosidl_typesupport_introspection_c.lib  tutorial_interfaces__rosidl_typesupport_opensplice_cpp.lib
dev_ws/src/install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.bat  package.bat  package.dsv  package.ps1  package.xml
dev_ws/src/install/tutorial_interfaces/share/tutorial_interfaces/cmake/: tutorial_interfacesConfig.cmake
dev_ws/src/install/tutorial_interfaces/share/tutorial_interfaces/msg/: Num.idl
dev_ws/src/pubsub_cpp/: CMakeLists.txt
dev_ws/src/pubsub_cpp/src/: pub.cpp  socket.cpp  sub.cpp
dev_ws/src/tutorial_interfaces/: CMakeLists.txt
docs/: README.md
front/: .gitignore  build.gradle  settings.gradle
front/app/: build.gradle  google-services.json
front/app/release/: output-metadata.json
front/app/src/androidTest/java/com/front/: ExampleInstrumentedTest.kt
front/app/src/androidTest/java/com/gaggum/: ExampleInstrumentedTest.kt
front/app/src/main/: AndroidManifest.xml
front/app/src/main/java/com/gaggum/: CameraActivity.kt  DiaryAdapter.kt  DiaryFragment.kt  FlowerClient.kt  ImagePreviewActivity.kt  ImageViewActivity.kt  JoinActivity.kt  KeyCertificationActivity.kt  LocationProvider.kt  MainActivity.kt  MainFragment.kt  MapScanActivity.kt  MyForegroundService.kt  MyPlantActivity.kt  MyPlantFragment.kt  MyPlantRVAdapter.kt  PlantDetailActivity.kt  PlantDetailFragment.kt  RVAdapter.kt  RegisterFragment.kt  RetrofitDto.kt  RetrofitObject.kt  RetrofitService.kt  SigninActivity.kt  SplashActivity.kt  UserRoom.kt  ViewPagerAdapter.kt  ViewPagerDTO.kt  WeatherClient.kt  WeatherObject.kt
front/app/src/main/res/drawable/: camera_button.xml  camera_button_background.xml  circle_background.xml  diary_button.xml  diary_plus_button.xml  modal_background.xml  radius_button.xml  radius_flowermean.xml  radius_flowername.xml  textview_rounded.xml  view_round_bottom.xml  view_round_top.xml
front/app/src/main/res/font/: font_awesome.xml
front/app/src/main/res/layout/: activity_camera.xml  activity_image_preview.xml  activity_image_view.xml  activity_join.xml  activity_key_certification.xml  activity_main.xml  activity_map_scan.xml  activity_my_plant.xml  activity_plant_detail.xml  activity_signin.xml  activity_splash.xml  delete_diary_dialog.xml  dialog_bottom.xml  diary_detail_modal.xml  diary_item.xml  fragment_diary.xml  fragment_main.xml  fragment_my_plant.xml  fragment_plant_detail.xml  fragment_register.xml  map_scan_cancel_dialog.xml  map_scan_dialog.xml  map_scan_start_dialog.xml  my_plant_rv_item.xml  pv_item.xml  rv_item.xml  rv_item_my_plant.xml  year_month_picker_dialog.xml
front/app/src/main/res/menu/: nav_menu.xml
front/app/src/main/res/navigation/: nav_graph.xml
front/app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  themes.xml
front/app/src/main/res/values-night/: themes.xml
front/app/src/test/java/com/gaggum/: ExampleUnitTest.kt
front/gradle/wrapper/: gradle-wrapper.properties
ros2/src/gaggum/: CMakeLists.txt  package.xml
ros2/src/gaggum/map/: map.txt
ros2/src/gaggum/nodes/: a_star.cpp  auto_move.cpp  gaggum_socket.cpp  goal.cpp  move_turtle.cpp  socket_pub.cpp  socket_sub.cpp  testpub.cpp  testsub.cpp  time_13.cpp  time_15.cpp  time_control.cpp  wall_tracking.cpp
ros2/src/gaggum_msgs/: CMakeLists.txt  package.xml
ros2/src/gaggum_msgs/msg/: Detection.msg  MapScan.msg  PlantArray.msg  PlantInfo.msg  SunPlantInfo.msg  WaterPlantInfo.msg
ros2/src/gaggum_python/: package.xml  setup.cfg  setup.py
ros2/src/gaggum_python/gaggum_python/: a_star.py  a_star_local_path.py  ex_calib.py  hand_control.py  handcontrol.py  image_capture.py  load_map.py  move_sun.py  move_turtle.py  navigation.py  odom.py  odom_reset.py  path_tracking.py  run_mapping.py  scan_read.py  send_goal.py  socket.py  tts.py  utils.py  wall_tracking.py  water.py  yolov5.py
ros2/src/gaggum_python/gaggum_python/model_weights/: model_class.txt
ros2/src/gaggum_python/map/: map.txt
ros2/src/navigation2/nav2_bringup/bringup/params/: nav2_params.yaml
ros2/src/turtlebot3/turtlebot3_navigation2/param/: burger.yaml
ros2/src/turtlebot3_navigation2/param/: burger.yaml
web/: Dockerfile  package-lock.json
web/public/: index.html  manifest.json
web/src/: App.css  App.js
web/src/assets/app/: gradient_bg.jfif
web/src/components/download/: Download.css  Download.jsx
(+63 files in other folders)
